feat : Developed preliminary interview page , updated backend based on ui changes in recruitment process page

--- a/public/stylesheets/candidate-popup.css
+++ b/public/stylesheets/candidate-popup.css
@@ -155,3 +155,17 @@ form .final{
     width: 120px;
     height: 30px ;
 }
+.field a {
+  text-decoration: none;
+}
+
+#updateModal .doc_button{
+    background-color: #37CAB5;
+    color : black;
+}
+
+
+#updateModal .doc_button:active{
+    color: white;
+}
+
