--- a/public/stylesheets/candidates.css
+++ b/public/stylesheets/candidates.css
@@ -137,7 +137,7 @@ header h2 {
     color: white;
     background-color: #2aa89a;
 }
-
+/* 
 .lists {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -218,7 +218,7 @@ header h2 {
 }
 .list #rejectbtn:hover{
     color: #fff;
-}
+} */
 
 .candidate_table{
     margin: 20px;
