--- a/public/stylesheets/candidates.css
+++ b/public/stylesheets/candidates.css
@@ -29,7 +29,7 @@ body {
     border-radius: 50px 0px 0px 50px;
 }
 .main-navbar a:hover {
-    background-color: #c8c8c8;
+    background-color: #e4e4e4;
     color: black;
     font-weight: bold;
 }
@@ -92,7 +92,7 @@ header h2 {
 }
 .newcandidate a:hover {
     color: #fff;
-    background-color: #2aa89a;
+    background-color: #37CAB5;
 }
 .buttons{
     display: flex;
@@ -195,13 +195,13 @@ color: white;
 .list .updatebtn {
     color: #000000;
     padding: 1px 15px 1px 15px;
-    background-color: #3754fe;
+    background-color: #37A8CA;
     border-radius: 5px;
     text-align: center;
     margin-bottom: 5px;
 }
 .list .updatebtn:hover{
-    background-color: #3754fe;
+    background-color: #37A8CA;
     color: #fff;
 }
 
@@ -267,27 +267,27 @@ color: white;
 }
 #candidateTable  .editbtn {
     border: none;
-    background-color: #37CAB5;
+    background-color: #37CA94;
     border-radius: 5px;
     text-decoration: none;
     color: #000000;
     padding: 3px 20px 2px 20px;
 }
 #candidateTable .editbtn:hover{
-    background-color: #2aa89a;
+    background-color: #37CA94;
     color: #fff;
 }
 
 #candidateTable .updatebtn {
     padding: 3px 20px 2px 20px;
-    background-color: #3754fe;
+    background-color: #37A8CA;
     border-radius: 5px;
     text-align: center;
     color: #000;
 }
 #candidateTable .updatebtn:hover{
     color: #fff;
-    background-color: #3754fe;
+    background-color: #37A8CA;
 }
 #candidateTable .btn{
     margin: 1px;
@@ -296,6 +296,7 @@ color: white;
     padding: 3px 20px 2px 20px;
     border-radius: 5px;
     text-align: center;
+    background-color: #dc3545;
 }
 .dataTables_filter{
     margin: 20px 0px 20px 0px;
@@ -304,13 +305,6 @@ color: white;
 
 .dataTables_filter input[type="search"] {
     min-width: 500px;
-}
-th.sorting_asc::after {
-    color: green;  
-}
-
-th.sorting_desc::after {
-    color: red; 
 }
 
 .dataTables_length{
@@ -365,3 +359,4 @@ th.sorting_desc::after {
 #updateModal #submitBtn{
     background-color: #37CAB5;
 }
+
